# HoneyBear-Folio

./: LICENSE  README.md  requirements.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-changelog-config.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: auto-label.yml  backend-tests.yml  frontend-tests.yml  lint-and-format.yml  release.yml
app/: a.diff  eslint.config.js  package-lock.json  package.json  tailwind.config.js  vite.config.js
app/flatpak/: com.bernatbc.honeybearfolio.yml  com.honeybearfolio.honeybearfolio.desktop  com.honeybearfolio.honeybearfolio.metainfo.xml  com.honeybearfolio.honeybearfolio.yml
app/scripts/: build-flatpak.sh
app/src/: App.css  App.jsx
app/src-tauri/: Cargo.toml  tauri.conf.json  test_output.txt  test_output_2.txt
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/proptest-regressions/tests/property/: property_proptest.txt
app/src-tauri/src/: accounts.rs  db_init.rs  lib.rs  markets.rs  models.rs  rules.rs  test_helpers.rs  tests.rs  transactions.rs  utils.rs
app/src-tauri/src/core/: accounts.rs  db_init.rs  markets.rs  mod.rs  models.rs  rules.rs  test_helpers.rs  transactions.rs  utils.rs
app/src-tauri/src/tests/: app_handle_tests.rs  brokerage_transaction.rs  common.rs  create_account.rs  create_transaction.rs  delete_account.rs  delete_transaction.rs  error_handling_tests.rs  mod.rs  payees_categories.rs  property_invariants.rs  property_proptest.rs  rename_account.rs  settings_tests.rs  stock_http_mock_tests.rs  stock_http_tests.rs  transaction_edge_cases.rs  update_brokerage_move.rs  update_brokerage_transaction.rs  update_transaction.rs
app/src-tauri/src/tests/accounts/: create_account.rs  delete_account.rs  mod.rs  rename_account.rs  update_account.rs
app/src-tauri/src/tests/app/: app_handle_tests.rs  commands_integration.rs  concurrent_init_db.rs  mod.rs  settings_edge_cases.rs  settings_tests.rs
app/src-tauri/src/tests/brokerage/: brokerage_transaction.rs  mod.rs  update_brokerage_counterpart_absent.rs  update_brokerage_move.rs  update_brokerage_transaction.rs
app/src-tauri/src/tests/errors/: api_error_tests.rs  error_handling_tests.rs  mod.rs
app/src-tauri/src/tests/multicurrency/: custom_rates_tests.rs  mod.rs  multicurrency_tests.rs
app/src-tauri/src/tests/payees/: mod.rs  payees_categories.rs
app/src-tauri/src/tests/property/: mod.rs  property_invariants.rs  property_proptest.rs
app/src-tauri/src/tests/rules/: create_rule.rs  delete_rule.rs  integration_tests.rs  matching_tests.rs  mod.rs  order_rules.rs  update_rule.rs
app/src-tauri/src/tests/stock/: all_network_fail_no_db.rs  concurrency_stress.rs  daily_prices_tests.rs  mod.rs  stock_http_mock_tests.rs  stock_http_tests.rs  stock_parsing_tests.rs  url_edge_cases.rs
app/src-tauri/src/tests/transactions/: create_transaction.rs  delete_transaction.rs  mod.rs  transaction_edge_cases.rs  transfer.rs  update_transaction.rs
app/src/components/: AccountDetails.jsx  AccountList.jsx  AccountModal.jsx  ChartNumberFormatSync.jsx  ConfirmDialog.jsx  CustomRateDialog.jsx  CustomSelect.jsx  Dashboard.jsx  ErrorBoundary.jsx  ExportModal.jsx  FireCalculator.jsx  ImportModal.jsx  InvestmentDashboard.jsx  Modal.jsx  NumberInput.jsx  RulesList.jsx  SankeyDiagram.jsx  SettingsModal.jsx  Sidebar.jsx  Toast.jsx  UpdateNotification.jsx  WelcomeWindow.jsx
app/src/components/layout/: ErrorBoundary.jsx  Sidebar.jsx
app/src/components/shared/: ChartNumberFormatSync.jsx  CustomRateDialog.jsx  DevTools.jsx  ExportModal.jsx  ImportModal.jsx  SettingsModal.jsx  UpdateNotification.jsx  WelcomeWindow.jsx
app/src/components/ui/: ConfirmDialog.jsx  CustomSelect.jsx  MaskedNumber.jsx  Modal.jsx  NumberInput.jsx  NumberInput.test.jsx  (+1 more)
app/src/config/: contributors.js  dev-settings.js  licenses.js
app/src/contexts/: NumberFormatContext.jsx  PrivacyContext.jsx  ThemeContext.jsx  privacy.js
app/src/hooks/: useCustomRate.jsx  useIsDark.js
app/src/i18n/: en.json
app/src/styles/: AccountDetails.css  App.css  Dashboard.css  ExportModal.css  ImportModal.css  Modal.css  SettingsModal.css  Shared.css  Sidebar.css  Toast.css  TreeMap.css  components.css  datepicker.css  theme.css
app/src/test/: setup.js
app/src/utils/: currencies.js  fire.js  format.js  investments.js  networth.js  version.js
(+45 files in other folders)
