[package]
name = "HoneyBear-Folio"
version = "0.1.0"
description = "HoneyBear Folio is a cross-platform personal finance desktop application built with Tauri (Rust backend), React (frontend), and SQLite (local database). It focuses on fast local data management (transactions, categories, budgets), clear dashboards and charts, portfolio tracking via Yahoo Finance market data, and import/export to common formats."
authors = ["HoneyBearFolio"]
edition = "2021"
license = "AGPL-3.0-or-later"
homepage = "https://honeybearfolio.github.io"
repository = "https://github.com/HoneyBearFolio/HoneyBear-Folio"
readme = "../README.md"
keywords = ["tauri", "finance", "personal-finance", "portfolio"]
categories = ["utilities", "finance"]
documentation = "https://github.com/HoneyBearFolio/HoneyBear-Folio#readme"

[package.metadata.deb]
maintainer = "HoneyBearFolio"
depends = ["libwebkit2gtk-4.1-0", "libappindicator3-1", "librsvg2-2", "libgtk-3-0", "patchelf"]
priority = "optional"
section = "utils"
repository = "https://github.com/HoneyBearFolio/HoneyBear-Folio"
homepage = "https://honeybearfolio.github.io"

[package.metadata.rpm]
summary = "Cross-platform personal finance desktop app."
description = "HoneyBear Folio is a cross-platform personal finance desktop application built with Tauri, React, and SQLite. It focuses on fast local data management, clear dashboards and charts, portfolio tracking, and import/export to common formats."
license = "AGPL-3.0-or-later"
url = "https://honeybearfolio.github.io"
repository = "https://github.com/HoneyBearFolio/HoneyBear-Folio"
vendor = "HoneyBearFolio"
packager = "HoneyBearFolio"
group = "Applications/Utilities"
requires = ["libwebkit2gtk-4.1", "libappindicator3", "librsvg2", "gtk3", "patchelf"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["test"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "cookies"] }
tokio = { version = "1", features = ["full"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"

[dev-dependencies]
tempfile = "3"
rand = "0.9"
httpmock = "0.8"
proptest = "1.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

